--- a/Leilani_site_zip/index.html
+++ b/Leilani_site_zip/index.html
@@ -4,13 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Opendag website leilani</title>
-    <link rel="stylesheet" href="opendag.css">
+    <link rel="stylesheet" href="css/opendag.css">
+    <script src="javascrip/javascript.js"></script>
 </head>
+<header>
+   
+</header>
 <body>
-    <div class="container">
-        <div class="bubbles">
-            
-        </div>
-    </div>
+
+         <section class="hid">
+    <div class="main">
+        <ul>
+            <li><a href="index.html">home</a></li>
+          <li><a href="schoolJaar.html">Eerste school jaar</a></li>
+          <li><a href="blokkenmogelijkeiden.html">blokken  & mogelijkheiden</a></li>
+          <li><a href="docenten.html">Docenten</a></li>
+          <li><a href="mijnbeleving.html">Mijn beleving</a></li>
+          <li><a href="werkwijzen.html">Werk wijzen</a></li>
+        </ul>
+      </section> 
+  </div> 
+
 </body>
 </html>
