--- a/Leilani_site_zip/index.html
+++ b/Leilani_site_zip/index.html
@@ -17,7 +17,7 @@
         <ul>
             <li><a href="index.html">home</a></li>
           <li><a href="schoolJaar.html">Eerste school jaar</a></li>
-          <li><a href="blokkenmogelijkeiden.html">blokken  & mogelijkheiden</a></li>
+          <li><a href="mogelijkheiden.html">blokken  & mogelijkheiden</a></li>
           <li><a href="docenten.html">Docenten</a></li>
           <li><a href="mijnbeleving.html">Mijn beleving</a></li>
           <li><a href="werkwijzen.html">Werk wijzen</a></li>
