--- a/Leilani_site_zip/docenten.html
+++ b/Leilani_site_zip/docenten.html
@@ -9,14 +9,45 @@
 
 </head>
 <body>
-    <div class="wrapper">
-        <div class="img">
-            <img src="img/IMG-20190713-WA0003.jpg" alt="">
-            <div class="content">
-                <h1>Docent</h1>
-                <p>Lorem ipsum dolor sit </p>
-            </div>
+  <div class="container">
+    <article class="card_article">
+      <div class="card_Container">
+        <img src="img/IMG-20190713-WA0003.jpg" alt="ine" class="card__img">
+        <div class="card_data">
+          <span class="card__despcription">Ine van Meer</span>
+          <h2 class="card__title">Webdocent</h2>
+          <p class="card__context">Leuke docent en mentor</p>
         </div>
-    </div>
+      </div>  
+    </article>
+
+    <article class="card_article">
+      <div class="card_Container">
+        <img src="" alt="" class="card__img">
+        <div class="card_data">
+          <span class="card__despcription"></span>
+          <h2 class="card__title"></h2>
+          <p class="card__context"></p>
+        </div>
+      </div>  
+    </article>
+
+
+    <article class="card_article">
+      <div class="card_Container">
+        <img src="" alt="" class="card__img">
+        <div class="card_data">
+          <span class="card__despcription"></span>
+          <h2 class="card__title"></h2>
+          <p class="card__context"></p>
+        </div>
+      </div>  
+    </article>
+
+
+    
+  </div>
+
+       
 </body>
 </html>
