pop up picture text

--- a/Leilani_site_zip/docenten.html
+++ b/Leilani_site_zip/docenten.html
@@ -10,10 +10,10 @@
 </head>
 <body>
   <div class="container">
-    <article class="card_article">
-      <div class="card_Container">
-        <img src="img/IMG-20190713-WA0003.jpg" alt="ine" class="card__img">
-        <div class="card_data">
+    <article class="card__article">
+      <div class="card__Container">
+        <img src="img/IMG-20190713-WA0003.jpg" alt="image" class="card__img">
+        <div class="card__data">
           <span class="card__despcription">Ine van Meer</span>
           <h2 class="card__title">Webdocent</h2>
           <p class="card__context">Leuke docent en mentor</p>
@@ -21,10 +21,10 @@
       </div>  
     </article>
 
-    <article class="card_article">
-      <div class="card_Container">
+    <article class="card__article">
+      <div class="card__Container">
         <img src="" alt="" class="card__img">
-        <div class="card_data">
+        <div class="card__data">
           <span class="card__despcription"></span>
           <h2 class="card__title"></h2>
           <p class="card__context"></p>
@@ -34,9 +34,9 @@
 
 
     <article class="card_article">
-      <div class="card_Container">
+      <div class="card__Container">
         <img src="" alt="" class="card__img">
-        <div class="card_data">
+        <div class="card__data">
           <span class="card__despcription"></span>
           <h2 class="card__title"></h2>
           <p class="card__context"></p>
