--- a/Leilani_site_zip/index.html
+++ b/Leilani_site_zip/index.html
@@ -13,7 +13,7 @@
 <body>
 
          <section class="hid">
-    <div class="main">
+    <div class="mainindex">
         <ul>
             <li><a href="index.html">home</a></li>
           <li><a href="schoolJaar.html">Eerste school jaar</a></li>
