--- a/Leilani_site_zip/docenten.html
+++ b/Leilani_site_zip/docenten.html
@@ -42,12 +42,35 @@
           <p class="card__context"></p>
         </div>
       </div>  
-    </article>
-
-
-    
-  </div>
-
-       
+    </article>   
+  </div>      
 </body>
+<footer class="Footer">
+  <div class="containerFooter">
+      <div class="rowFooter">
+          <div class="footer-col">
+              <h4>pages</h4>
+              <ul class="ulFooter">
+                  <li><a href="#">Home</a></li>
+                  <li><a href="#">informatiebestellen</a></li>
+                  <li><a href="#">informatieproducten</a></li>
+                  <li><a href="#">contacten</a></li>
+              </ul>
+          </div>
+          <div class="rowFooter">
+              <div class="footer-col">
+                  <h4>follow us</h4>
+              <div class="social-links">
+                  <a href="https://www.facebook.com/kyrewiet/?locale=nl_NL"><ion-icon name="logo-facebook"></ion-icon></a>
+                  <a href="https://www.instagram.com/atelierkyrewiet/"><ion-icon name="logo-instagram"></ion-icon></a>
+                  <a href="//wa.me/0624512770"><ion-icon name="logo-whatsapp"></ion-icon></a>
+              </div>
+              </div>
+      </div>
+  </div>
+</footer>
+<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+
+
 </html>
