background en extra stuf

--- a/Leilani_site_zip/docenten.html
+++ b/Leilani_site_zip/docenten.html
@@ -8,7 +8,7 @@
     <script src="javascrip/javascript.js"></script>
 
 </head>
-<body>
+<body class="bodydocenten">
   <div class="container">
     <article class="card__article">
       <div class="card__Container">
@@ -23,11 +23,11 @@
 
     <article class="card__article">
       <div class="card__Container">
-        <img src="" alt="" class="card__img">
+        <img src="img/kazar.jpg" alt="" class="card__img">
         <div class="card__data">
-          <span class="card__despcription"></span>
-          <h2 class="card__title"></h2>
-          <p class="card__context"></p>
+          <span class="card__despcription">Kazar</span>
+          <h2 class="card__title">Engels docent</h2>
+          <p class="card__context">Grapige engels docent</p>
         </div>
       </div>  
     </article>
