--- a/Leilani_site_zip/docenten.html
+++ b/Leilani_site_zip/docenten.html
@@ -32,14 +32,13 @@
       </div>  
     </article>
 
-
-    <article class="card_article">
+    <article class="card__article">
       <div class="card__Container">
-        <img src="" alt="" class="card__img">
+        <img src="img/elton.jpg" alt="" class="card__img">
         <div class="card__data">
-          <span class="card__despcription"></span>
-          <h2 class="card__title"></h2>
-          <p class="card__context"></p>
+          <span class="card__despcription">Elton</span>
+          <h2 class="card__title">Webdocent</h2>
+          <p class="card__context">Webdocent met extra swag</p>
         </div>
       </div>  
     </article>   
