--- a/Leilani_site_zip/docenten.html
+++ b/Leilani_site_zip/docenten.html
@@ -8,7 +8,19 @@
     <script src="javascrip/javascript.js"></script>
 
 </head>
+
 <body class="bodydocenten">
+ <div class="wrapper">
+  <header>
+  <nav class="nav">
+    <a href="werkwijzen.html" class="nav-item is-active" active-color="orange">werkwijzen</a>
+    <a href="docenten.html" class="nav-item" active-color="green">docenten</a>
+    <a href="mijnbeleving.html" class="nav-item" active-color="blue">mijnbeleving</a>
+    <a href="mogelijkheiden.html" class="nav-item" active-color="red">mogelijkheiden</a>
+    <a href="schoolJaar.html"class="nav-item" active-color="rebeccapurple">schoolJaar</a>
+    <span class="nav-indicator"></span>
+  </nav>
+</header>
   <div class="container">
     <article class="card__article">
       <div class="card__Container">
@@ -42,7 +54,9 @@
         </div>
       </div>  
     </article>   
-  </div>      
+  </div> 
+ </div> 
+     
 </body>
 <footer class="Footer">
   <div class="containerFooter">
