--- a/Leilani_site_zip/schoolJaar.html
+++ b/Leilani_site_zip/schoolJaar.html
@@ -9,16 +9,27 @@
 
 </head>
 <body class="bodydocenten">
-<header>
-    <nav class="nav">
-        <a href="werkwijzen.html" class="nav-item is-active" active-color="orange">werkwijzen</a>
-        <a href="docenten.html" class="nav-item" active-color="green">docenten</a>
-        <a href="mijnbeleving.html" class="nav-item" active-color="blue">mijnbeleving</a>
-        <a href="mogelijkheiden.html" class="nav-item" active-color="red">mogelijkheiden</a>
-        <a href="schoolJaar.html"class="nav-item" active-color="rebeccapurple">schoolJaar</a>
-        <span class="nav-indicator"></span>
-      </nav>
-    </header>
+    <div class="wrapper">
+            <header>
+        <nav class="nav">
+            <a href="werkwijzen.html" class="nav-item is-active" active-color="orange">werkwijzen</a>
+            <a href="docenten.html" class="nav-item" active-color="green">docenten</a>
+            <a href="mijnbeleving.html" class="nav-item" active-color="blue">mijnbeleving</a>
+            <a href="mogelijkheiden.html" class="nav-item" active-color="red">mogelijkheiden</a>
+            <a href="schoolJaar.html"class="nav-item" active-color="rebeccapurple">schoolJaar</a>
+            <span class="nav-indicator"></span>
+        </nav>
+        </header>
+        </div>
+        <div class="lesroster">
+            <img src="img/Rooster eerste leerjaar.png" alt="">
+        </div>
+        <div class="vakken-container">
+        <div class="vak-card">
+            <h3>Rekenen</h3>
+            <p>Je leert verschilende reken vaardigheiden</p>
+        </div>
+   </div>
       
 </body>
 <footer class="Footer">
@@ -27,20 +38,21 @@
           <div class="footer-col">
               <h4>pages</h4>
               <ul class="ulFooter">
-                  <li><a href="#">Home</a></li>
-                  <li><a href="#">informatiebestellen</a></li>
-                  <li><a href="#">informatieproducten</a></li>
-                  <li><a href="#">contacten</a></li>
-              </ul>
+                <li><a href="werkwijzen.html">werkwijzen</a></li>
+                <li><a href="docenten.html">docenten</a></li>
+                <li><a href="mijnbeleving.html">mijnbeleving</a></li>
+                <li><a href="mogelijkheiden.html">mogelijkheiden</a></li>
+                <li><a href="schoolJaar.html">schoolJaar</a></li>
+            </ul>
           </div>
           <div class="rowFooter">
               <div class="footer-col">
                   <h4>follow us</h4>
               <div class="social-links">
-                  <a href="https://www.facebook.com/kyrewiet/?locale=nl_NL"><ion-icon name="logo-facebook"></ion-icon></a>
-                  <a href="https://www.instagram.com/atelierkyrewiet/"><ion-icon name="logo-instagram"></ion-icon></a>
-                  <a href="//wa.me/0624512770"><ion-icon name="logo-whatsapp"></ion-icon></a>
-              </div>
+                <a href="https://www.facebook.com/groups/477785032270977/"><ion-icon name="logo-facebook"></ion-icon></a>
+                <a href="https://www.instagram.com/curio.techniek.industrie/"><ion-icon name="logo-instagram"></ion-icon></a>
+                <a href="#"><ion-icon name="logo-whatsapp"></ion-icon></a>
+            </div>
               </div>
       </div>
   </div>
