--- a/Leilani_site_zip/schoolJaar.html
+++ b/Leilani_site_zip/schoolJaar.html
@@ -29,6 +29,22 @@
             <h3>Rekenen</h3>
             <p>Je leert verschilende reken vaardigheiden</p>
         </div>
+        <div class="vak-card">
+            <h3>Nederlands</h3>
+            <p>Nederlandse taal vaardigheiden</p>
+        </div>
+        <div class="vak-card">
+            <h3>Native</h3>
+            <p>Introductie tot mobile apps of games</p>
+        </div>
+        <div class="vak-card">
+            <h3>WEB</h3>
+            <p>Introductie tot websites maken met html/css/php</p>
+        </div>
+        <div class="vak-card">
+            <h3>Pro & pra</h3>
+            <p>hier oefen je om ervaring te doen voor de werk vloer</p>
+        </div>
    </div>
       
 </body>
