--- a/Leilani_site_zip/mijnbeleving.html
+++ b/Leilani_site_zip/mijnbeleving.html
@@ -10,20 +10,33 @@
 </head>
 
 <body class="bodydocenten">
+
+                    <div class="logo">
+                      <img src="img/33390-removebg-preview.png" alt="">
+                   </div>
     <div class="wrapper">
+
         <header>
-  <nav class="nav">
-    <a href="werkwijzen.html" class="nav-item is-active" active-color="orange">werkwijzen</a>
-    <a href="docenten.html" class="nav-item" active-color="green">docenten</a>
-    <a href="mijnbeleving.html" class="nav-item" active-color="blue">mijnbeleving</a>
-    <a href="mogelijkheiden.html" class="nav-item" active-color="red">mogelijkheiden</a>
-    <a href="schoolJaar.html"class="nav-item" active-color="rebeccapurple">schoolJaar</a>
-    <span class="nav-indicator"></span>
-  </nav>
-</header>
-  
+
+          <nav class="nav">
+            <a href="werkwijzen.html" class="nav-item is-active" active-color="orange">werkwijzen</a>
+            <a href="docenten.html" class="nav-item" active-color="green">docenten</a>
+            <a href="mijnbeleving.html" class="nav-item" active-color="blue">mijnbeleving</a>
+            <a href="mogelijkheiden.html" class="nav-item" active-color="red">mogelijkheiden</a>
+            <a href="schoolJaar.html"class="nav-item" active-color="rebeccapurple">schoolJaar</a>
+            <span class="nav-indicator"></span>
+          </nav>
+      </header>
+      <div class="Blok">
+        <div class="BlokA"></div>
+          <H1>BLOCK A</H1>
+          <p> Ik vond blok A wel heel interessant, er konden wel wat verbeteringen zijn, maar voor een student die net met de opleiding begon was het wel redelijk okay en was het best wel leerzaam. Ik vond web wel het leukste tijdens blok A.</p>
+        </div>
+      </div>
+        
+   </div>   
 </body>
-    </div>
+    
 
 <footer class="Footer">
   <div class="containerFooter">
