--- a/Leilani_site_zip/mijnbeleving.html
+++ b/Leilani_site_zip/mijnbeleving.html
@@ -12,7 +12,7 @@
 <body class="bodydocenten">
 
                     <div class="logo">
-                      <img src="img/33390-removebg-preview.png" alt="">
+                      <img src="img/curio-02-wit-logo-rgb.png" alt="">
                    </div>
     <div class="wrapper">
 
@@ -28,9 +28,11 @@
           </nav>
       </header>
       <div class="Blok">
-        <div class="BlokA"></div>
-          <H1>BLOCK A</H1>
+        <div class="BlokA">
+                    <H1>BLOCK A</H1>
           <p> Ik vond blok A wel heel interessant, er konden wel wat verbeteringen zijn, maar voor een student die net met de opleiding begon was het wel redelijk okay en was het best wel leerzaam. Ik vond web wel het leukste tijdens blok A.</p>
+
+        </div>
         </div>
       </div>
         
