--- a/Leilani_site_zip/mogelijkheiden.html
+++ b/Leilani_site_zip/mogelijkheiden.html
@@ -10,6 +10,10 @@
 </head>
 
 <body class="bodydocenten">
+    
+    <div class="logo">
+        <img src="img/curio-02-wit-logo-rgb.png" alt="">
+     </div>
 <div class="wrapper">
    <header>
     <nav class="nav">
