--- a/Leilani_site_zip/schoolJaar.html
+++ b/Leilani_site_zip/schoolJaar.html
@@ -9,6 +9,10 @@
 
 </head>
 <body class="bodydocenten">
+    
+    <div class="logo">
+        <img src="img/curio-02-wit-logo-rgb.png" alt="">
+     </div>
     <div class="wrapper">
             <header>
         <nav class="nav">
@@ -46,28 +50,16 @@
             <p>hier oefen je om ervaring te doen voor de werk vloer</p>
         </div>
    </div>
-   
+   <h2 class="Blockbtext">Block B</h2>
    <div class="vakken-container2">
-    <div class="vak-card2">
-        <h3>Rekenen</h3>
-        <p>Je leert verschilende reken vaardigheiden</p>
-    </div>
-    <div class="vak-card2">
-        <h3>Nederlands</h3>
-        <p>Nederlandse taal vaardigheiden</p>
-    </div>
-    <div class="vak-card2">
-        <h3>Native</h3>
-        <p>Introductie tot mobile apps of games</p>
-    </div>
-    <div class="vak-card2">
-        <h3>WEB</h3>
-        <p>Introductie tot websites maken met html/css/php</p>
-    </div>
-    <div class="vak-card2">
-        <h3>Pro & pra</h3>
-        <p>hier oefen je om ervaring te doen voor de werk vloer</p>
-    </div>
+        <div class="vak-card2">
+            <h3>Rekenen</h3>
+            <p>Je leert verschilende reken vaardigheiden</p>
+        </div>
+        <div class="vak-card2">
+            <h3>Digitalen vaardigheiden</h3>
+            <p>hier leer je om dingen op word excel de basis vaardigheiden op een computer</p>
+        </div>
 </div>
       
 </body>
