--- a/Leilani_site_zip/docenten.html
+++ b/Leilani_site_zip/docenten.html
@@ -28,7 +28,7 @@
   <div class="container">
     <article class="card__article">
       <div class="card__Container">
-        <img src="img/IMG-20190713-WA0003.jpg" alt="image" class="card__img">
+        <img src="img/ine.jpeg" alt="image" class="card__img">
         <div class="card__data">
           <span class="card__despcription">Ine van Meer</span>
           <h2 class="card__title">Webdocent</h2>
@@ -39,7 +39,7 @@
 
     <article class="card__article">
       <div class="card__Container">
-        <img src="img/kazar.jpg" alt="" class="card__img">
+        <img src="img/kazar.jpeg" alt="" class="card__img">
         <div class="card__data">
           <span class="card__despcription">Kazar</span>
           <h2 class="card__title">Engels docent</h2>
@@ -50,11 +50,11 @@
 
     <article class="card__article">
       <div class="card__Container">
-        <img src="img/elton.jpg" alt="" class="card__img">
+        <img src="img/micheal de jong.jpeg" alt="" class="card__img">
         <div class="card__data">
-          <span class="card__despcription">Elton</span>
-          <h2 class="card__title">Webdocent</h2>
-          <p class="card__context">Webdocent met extra swag</p>
+          <span class="card__despcription">Micheal de jong</span>
+          <h2 class="card__title">Webdocent, Pra & pro</h2>
+          <p class="card__context">Hij is gewoon gangster</p>
         </div>
       </div>  
     </article>   
