--- a/Leilani_site_zip/mijnbeleving.html
+++ b/Leilani_site_zip/mijnbeleving.html
@@ -66,6 +66,8 @@
                 <li><a href="mijnbeleving.html">mijnbeleving</a></li>
                 <li><a href="mogelijkheiden.html">mogelijkheiden</a></li>
                 <li><a href="schoolJaar.html">schoolJaar</a></li>
+                <li><a href="index.html">index</a></li>
+
             </ul>
           </div>
           <div class="rowFooter">
