--- a/Leilani_site_zip/werkwijzen.html
+++ b/Leilani_site_zip/werkwijzen.html
@@ -15,19 +15,29 @@
         <img src="img/curio-02-wit-logo-rgb.png" alt="">
      </div>
     <div class="wrapper">
-        <header>
-    <nav class="nav">
-        <a href="werkwijzen.html" class="nav-item is-active" active-color="orange">werkwijzen</a>
-        <a href="docenten.html" class="nav-item" active-color="green">docenten</a>
-        <a href="mijnbeleving.html" class="nav-item" active-color="blue">mijnbeleving</a>
-        <a href="mogelijkheiden.html" class="nav-item" active-color="red">mogelijkheiden</a>
-        <a href="schoolJaar.html"class="nav-item" active-color="rebeccapurple">schoolJaar</a>
-        <span class="nav-indicator"></span>
-      </nav>
-    </header>
-    </div>
+           <header>
+            <nav class="nav">
+                <a href="werkwijzen.html" class="nav-item is-active" active-color="green">werkwijzen</a>
+                <a href="docenten.html" class="nav-item" active-color="green">docenten</a>
+                <a href="mijnbeleving.html" class="nav-item" active-color="blue">mijnbeleving</a>
+                <a href="mogelijkheiden.html" class="nav-item" active-color="red">mogelijkheiden</a>
+                <a href="schoolJaar.html"class="nav-item" active-color="rebeccapurple">schoolJaar</a>
+                <span class="nav-indicator"></span>
+            </nav>
+        </header>
+        <div class="video-container">
+            <video autoplay muted loop class="background-video">
+                <source src="video/SD_video.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+            <div class="overlay">
+                <p>De opleiding focust op werkhouding, waarbij studenten leren samenwerken in teams en zelfstandig aan projecten werken. Groepsprojecten verbeteren communicatie, terwijl individueel werk creativiteit en persoonlijke ontwikkeling stimuleert. Deze balans versterkt zowel technische als sociale vaardigheden en bereidt studenten voor de arbeidsmarkt, waar samenwerking en onafhankelijkheid essentieel zijn. 
+                    Kortom, de opleiding bevordert een holistische ontwikkeling van de student.</p>
+            </div>
+        </div>
 
-  
+    </div>
+     
 </body>
 <footer class="Footer">
   <div class="containerFooter">
@@ -40,6 +50,8 @@
                   <li><a href="mijnbeleving.html">mijnbeleving</a></li>
                   <li><a href="mogelijkheiden.html">mogelijkheiden</a></li>
                   <li><a href="schoolJaar.html">schoolJaar</a></li>
+                  <li><a href="index.html">index</a></li>
+
               </ul>
           </div>
           <div class="rowFooter">
